test/runtime/fail/fn/missing_name.hy

// expect error: Undefined struct `hello`

fn (hello, there) {
	// ...
}
